--- a/rapports/report/bibliography.bib
+++ b/rapports/report/bibliography.bib
@@ -1,7 +1,5 @@
 \usepackage[french]{babel}
 
-% TODO: ajouter slides du cours et rapports Loic
-
 @techreport{bassang_semestre,
 title={{Docker and Internet of Things}},
 author={{Loïc Bassang}},
@@ -179,6 +177,22 @@ month={mai}
 title={{Filesystems - Secured Embedded Systems}},
 author={{Jean-Roland Schuler}},
 note={Cours HES-SO Master},
+year={2016},
+month={mai}
+}
+
+@misc{docker_select_a_driver,
+title={{Select a storage driver}},
+author={{Docker Inc.}},
+note={\url{https://docs.docker.com/engine/userguide/storagedriver/selectadriver/}},
+year={2016},
+month={mai}
+}
+
+@misc{jpetazzoni_device_driver,
+title={{Deep dive into Docker storage drivers}},
+author={{Jérôme Petazzoni}},
+note={\url{https://jpetazzo.github.io/assets/2015-03-03-not-so-deep-dive-into-docker-storage-drivers.html}},
 year={2016},
 month={mai}
 }
